--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,11 @@
 /* TODO: Add sitewide styles */
+body {
+  background-color: #232020;
+  color: #fff;
+  font-family: 'Arial', sans-serif;
+}
+
+h1 {
+  text-align: center;
+  color: rgb(255, 166, 107)
+}
