day 1 css struggling

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -5,3 +5,31 @@ form {
   width: 300px;
   box-shadow: 0 0 10px rgb(255, 166, 107);
 }
+
+label {
+  display: block;
+  margin: 10px 0;
+}
+
+input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 4px;
+  box-sizing: border-box;
+  background-color: #383737;
+  color: #fff;
+  border: 1px solid rgb(255, 166, 107);
+  border-radius: 4px;
+}
+
+button.login {
+  width: 100%;
+  padding: 10px;
+  background-color: rgb(255, 166, 107);
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
