--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -8,6 +8,7 @@
   padding: 0px 20px 0px 20px;
   height: 50;
   align-items: center;
+  overflow: hidden;
 }
 
 .menu-button {
@@ -35,8 +36,4 @@
 
 .home-link {
   color: rgb(255, 166, 107);
-}
-
-NavLink:visited {
-  text-decoration: none;
 }
