--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,6 +9,8 @@
   height: 50;
   align-items: center;
   overflow: hidden;
+  border-bottom: 1px solid rgb(255, 166, 107);
+  margin-bottom: 35px;
 }
 
 .menu-button {
