--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,16 @@ h1 {
   position: static;
 }
 
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: rgb(255, 166, 107);
+  color: #000000;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 button:hover {
   background-color: #949494;
 }
