--- a/frontend/src/components/DeleteSpotModal/DeleteSpotModal.css
+++ b/frontend/src/components/DeleteSpotModal/DeleteSpotModal.css
@@ -3,8 +3,8 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 25%;
-  height: 25px;
+  width: 135px;
+  height: 35px;
 }
 
 .yes-delete:hover {
@@ -17,15 +17,19 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 25%;
-  height: 25px;
+  width: 135px;
+  height: 35px;
 }
 
 .delete-modal {
   display: flex;
+  flex-direction: column;
 }
 
 .buttons {
-  display: flex;
-  justify-content: space-evenly;
+  margin-top: 15px;
+}
+
+h2 {
+  text-align: center;
 }
