--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -7,15 +7,21 @@
   margin-right: 200px;
 }
 
+.spot-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .spot-tile-manage {
-  height: 505px;
+  height: 405px;
   width: 325px;
   display: grid;
   grid-template-rows: 1fr 40px 40px;
   border: 1px solid rgb(255, 166, 107);
   border-radius: 8px;
   overflow: hidden;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
@@ -56,4 +62,23 @@
 }
 
 .update-delete {
+  display: flex;
+  gap: 100px;
+  margin-bottom: 20px;
+}
+
+.update-delete button {
+  cursor: pointer;
+  width: 100px;
+}
+
+.to-new {
+  width: 200px;
+  margin-left: 220px;
+  margin-bottom: 20px;
+}
+
+.manage-spots-h1 {
+  text-align: start;
+  margin-left: 220px;
 }
