--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0px 20px 0px 20px;
-  height: 50;
+  height: 50px;
   align-items: center;
   overflow: hidden;
   border-bottom: 1px solid rgb(255, 166, 107);
@@ -38,4 +38,11 @@
 
 .home-link {
   color: rgb(255, 166, 107);
+}
+
+.create-spot {
+  width: 110px;
+  position: absolute;
+  top: 12px;
+  right: 160px;
 }
