--- a/frontend/src/components/NewSpot/NewSpot.css
+++ b/frontend/src/components/NewSpot/NewSpot.css
@@ -1,9 +1,8 @@
 .new-spot-form {
-  background-color: #000000;
+  background-color: #191717;
   padding: 20px;
   border-radius: 10px;
-  width: 1000px;
-  box-shadow: 0 0 10px rgb(182, 91, 30);
+  width: 600px;
   margin: 0 auto;
 }
 
@@ -17,4 +16,16 @@ textarea {
   color: rgb(182, 91, 30);
   border: 1px solid rgb(182, 91, 30);
   border-radius: 4px;
+}
+
+.section-1-title {
+  text-align: center;
+}
+
+.section-1 {
+  border-bottom: 1px solid rgb(182, 91, 30);;
+}
+
+.submit-spot {
+  margin-top: 10px;
 }
